--- a/home.html
+++ b/home.html
@@ -8,6 +8,8 @@
 
 
 <style>
+  @import url('https://fonts.googleapis.com/css?family=Raleway');
+
 
 * {
 
@@ -18,7 +20,6 @@
 } 
 
 
-@import url('https://fonts.googleapis.com/css?family=Raleway');
 
 .footer-distributed {
     background: -webkit-linear-gradient(right, #a6f77b, #2ec06f);
@@ -27,6 +28,8 @@
   width: 100%;
   text-align: left;
   font: normal 16px sans-serif;
+  font-family: 'Raleway',sans-serif;  
+
   padding: 45px 50px;
 }
 
@@ -124,7 +127,7 @@
 .page {
  
   background: #fdfdfd;
-  font-family: sans-serif;  ;
+  font-family: 'Raleway',sans-serif;  
   font-weight: 600;
   letter-spacing: .03em;
   color: #212121;
@@ -133,6 +136,7 @@
 header {
   display: flex;
   position: fixed;
+  font-family: 'Raleway',sans-serif;  
   width: 100%;
   height: 70px;
   background: -webkit-linear-gradient(right, #a6f77b, #2ec06f);
@@ -444,7 +448,7 @@ img {
       <h2 >Online Quizz <br>For <br>Everyone!<br>
       
 
-<button  onclick=" window.open('courses.html')" class="getstart"><span>Explore </span></button></h2>
+<button  onclick=" window.open('departments.html')" class="getstart"><span>Explore </span></button></h2>
 
       <img src="first.jpg" style=" flex:60%;height: 500px;">
     
