--- a/departments.html
+++ b/departments.html
@@ -209,7 +209,7 @@
     }
     
     #nav-content li a:hover {
-      color: #BF7497;
+      color: #2ec06f;
     }
     
     #nav-content li:not(.small) + .small {
